add lrc source,fix bug,decode confuse code